# backend/api/src/main/java/com/shoppiem/api/controller/ProductController.java
@@ -3,7 +3,6 @@ package com.shoppiem.api.controller;
 import com.shoppiem.api.ProductApi;
 import com.shoppiem.api.ProductCreateResponse;
 import com.shoppiem.api.ProductFromDataRequest;
-import com.shoppiem.api.ProductRequest;
 import com.shoppiem.api.service.product.ProductService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -20,11 +19,6 @@ import org.springframework.web.bind.annotation.RestController;
 public class ProductController implements ProductApi {
 
   private final ProductService productService;
-
-  @Override
-  public ResponseEntity<ProductCreateResponse> createProduct(ProductRequest productRequest) {
-    return ResponseEntity.ok(productService.createProduct(productRequest));
-  }
 
   @Override
   public ResponseEntity<ProductCreateResponse> createProductFromData(
